--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,19 @@ services:
     networks:
       - frontend
     restart: always
-    ports:
-      - "9200:9200"
     volumes:
       - ./ES_DATA:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+
+  hacker:
+    image: "dineshsonachalam/hacker:1.0.1"
+    networks:
+      - frontend
+    restart: always
+    ports:
+      - "8005:8005"
+
 
 networks:
   frontend:
