--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     volumes:
       - ./ES_DATA:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
 
 
   hacker:
