--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,13 @@ http {
     server {
         listen 80;
         server_name contentsea.tk;
+        return 301 https://$server_name$request_uri;
+    }
+    server {
+        listen 80;
+        server_name contentsea.tk;
+        ssl_certificate /etc/nginx/certificate.crt;
+        ssl_certificate_key /etc/nginx/private.key;
         location / {
             proxy_pass         http://app_hacker;
             proxy_redirect     off;
