--- a/server_docker-compose.yml
+++ b/server_docker-compose.yml
@@ -30,9 +30,10 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-  
+      - /root/certs:/etc/nginx
 
 networks:
   frontend:
