--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
         return 301 https://$server_name$request_uri;
     }
     server {
-        listen 80;
+        listen 443 ssl;
         server_name contentsea.tk;
         ssl_certificate /etc/nginx/certificate.crt;
         ssl_certificate_key /etc/nginx/private.key;
