--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
       - ./ES_DATA:/usr/share/elasticsearch/data
     environment:
       - discovery.type=single-node
-      - bootstrap.memory_lock = true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     healthcheck:
       test: ["CMD", "curl","-s" ,"-f", "http://localhost:9200/_cat/health"]
       retries: 6
+    ports:
+      - "9200:9200"
+      - "9300:9300"
 
   hacker:
     image: "dineshsonachalam/hacker:1.0.0"
