--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ worker_processes 4;
 events { worker_connections 1024; }
 http {
     sendfile on;
-    upstream adp-api-backend {
-        server 127.0.0.1:8085;
+    upstream search-engine-api-backend {
+        server 127.0.0.1:8000;
     }
     server {
         listen 0.0.0.0:80;
@@ -17,7 +17,7 @@ http {
         ssl_certificate ./certs-dev/certificate.crt;
         ssl_certificate_key ./certs-dev/private.key;
         location / {
-            proxy_pass         http://adp-api-backend;
+            proxy_pass         http://search-engine-api-backend;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
