--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["sh", "startup.sh"]
-
-# docker build --no-cache -t myimage2 .
+CMD ["python3", "main.py"]
