--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,8 @@ jobs:
 
       - name: Build backend and frontend image
         run: |
-          npm run build
+          npm i --prefix frontend
+          npm run build --prefix frontend
           docker build --no-cache -t dineshsonachalam/tech-courses-search-engine-backend:latest -f backend.Dockerfile .
           docker build --no-cache -t dineshsonachalam/tech-courses-search-engine-frontend:latest -f frontend.Dockerfile .  
 
