--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,6 +34,7 @@ jobs:
 
 
   upload-docker-image:
+    needs: integration-tests
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
