--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
           run: |
             python3 backend/main.py &
             npm run start --prefix frontend &
-            curl --location --request GET 'http://localhost:8000/autocomplete?query=kubernetes'
+            curl --location --request GET 'http://0.0.0.0:8000/autocomplete?query=kubernetes'
 
         - name: API testing
           run: pytest backend -s
