--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,8 +15,9 @@ jobs:
       steps: 
         - uses: actions/checkout@v2
         - name: Start the elasticsearch docker container
-          run: docker run -d -p 9200:9200 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.12.0
-
+          run: |
+            docker run -d -p 9200:9200 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.12.0
+            echo "127.0.0.1 elasticsearch" | sudo tee -a /etc/hosts
         - name: Install backend and frontend dependencies
           run: |
             pip3 install -r backend/requirements.txt
