--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,6 +31,7 @@ jobs:
 
         - name: Cypress End to End testing
           uses: cypress-io/github-action@v2
+          run: npm run start --prefix frontend &
           with:
             working-directory: frontend
 
