--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
-sonar.projectKey=dineshsonachalam_Building-a-search-engine-using-Elasticsearch
-sonar.organization=dineshsonachalam-github
+sonar.projectKey=tech-courses-search-engine
+sonar.organization=dineshsonachalam
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=tech-courses-search-engine
-#sonar.projectVersion=1.0
+sonar.projectName=tech-courses-search-engine
+sonar.projectVersion=1.0
+sonar.python.coverage.reportPaths=coverage.xml
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
