--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,7 @@ sonar.projectName=tech-courses-search-engine
 sonar.projectVersion=1.0
 
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+sonar.python.coverage.reportPaths=coverage.xml
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
